hphp/test/zend/good/Zend/tests/variadic/removing_parameter_ok.php.expectf

Fatal error: Declaration of MySQL::query() must be compatible with that of DB::query() in %s/removing_parameter_error.php on line 11
